@@ -1,3 +1,9 @@
+2015-12-20  Markus Gans  <guru.mail@muenster.de>
+	* Bug fix in FTerm updateVTerm() for updates from vdesktop
+	* Add raiseWindow() to FMenuBar::leaveMenuBar()
+	* Fix allocation of null strings with the FString = operator
+	* Fix for non printable characters in Cygwin and TeraTerm
+
 2015-12-19  Markus Gans  <guru.mail@muenster.de>
 	* Add delOwnTimer() for FObject
 	* Close sub-menu on right and middle click
